# fieldkit-csht-cloud-v2

./: INGESTION_QUEUE_EXPLAINED.md  huongdan.md
firmware/: .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  gdb.py
firmware/bootloader/: main.c
firmware/cmake/: Arduino.cmake  ArduinoTools.cmake  FindFreeRTOS.cmake  FindWiFi101.cmake
firmware/fk/: CMakeLists.txt  activity.h  base64.cpp  base64.h  buffers.cpp  buffers.h  circular_buffer.h  collections.h  common.h  compare_banks_worker.cpp  config.cpp  config.h  core_dump.cpp  curves.cpp  curves.h  debugging.cpp  debugging.h  deep_sleep.cpp  deep_sleep.h  dependencies.cmake  device_name.cpp  display_self_check_callbacks.cpp  display_self_check_callbacks.h  errors.cpp  errors.h  exchange.h  export_data_worker.cpp  export_data_worker.h  firmware_manager.cpp  firmware_manager.h  fk.h  graceful_shutdown.cpp  gs_progress_callbacks.h  io.cpp  io.h  line_reader.h  live_tests.cpp  log_buffer.h  logging.cpp  logging.h  (+51 more)
firmware/fk/data/: adjectives.h  animals.h
firmware/fk/display/: display_views.h  gps_view.cpp  gps_view.h  home_view.cpp  home_view.h  leds.cpp  leds.h  menu_view.cpp  menu_view.h  module_status_view.cpp  module_status_view.h  name_view.h  readings_view.cpp  readings_view.h  schedule_view.cpp  self_check_view.h  set_time.cpp  set_time.h
firmware/fk/hal/: board.cpp  buttons.cpp  buttons.h  display.cpp  display.h  flash.cpp  flash.h  gps.cpp  gps.h  ipc.cpp  ipc.h  memory.cpp  memory.h  modmux.cpp  modmux.h  mutex.h  network.cpp  network.h  pins.h  random.cpp  releasable.cpp  sd_card.cpp  sd_card.h  watchdog.cpp  watchdog.h
firmware/fk/hal/linux/: debug_log.cpp  debug_log.h  linux_battery_gauge.h  linux_buttons.cpp  linux_buttons.h  linux_gps.cpp  linux_gps.h  linux_ipc.cpp  linux_ipc.h  linux_leds.h  linux_memory.cpp  linux_memory.h  linux_modmux.cpp  linux_modmux.h  linux_network.h  linux_sd_card.cpp  linux_sd_card.h
firmware/fk/hal/metal/: april_network.cpp  april_network.h  esp32_network.cpp  esp32_network.h  format_sd_card.cpp  format_sd_card.h  ina219.cpp  ina219.h  mdns.cpp  mdns.h  metal_battery_gauge.cpp  metal_battery_gauge.h  metal_buttons.cpp  metal_buttons.h  metal_clock.cpp  metal_ipc.cpp  metal_ipc.h  metal_leds.h  metal_lora.cpp  metal_memory.cpp  metal_memory.h  metal_modmux.cpp  metal_modmux.h  metal_network.cpp  metal_network.h  metal_qspi.cpp  metal_qspi.h  metal_sd_card.cpp  pin_modmux.cpp  pin_modmux.h  sc16is740.cpp  simple_ntp.cpp  simple_ntp.h  spi_flash.cpp  spi_flash.h  u8g2_display.cpp  u8g2_display.h  udp_discovery.cpp  udp_discovery.h  udp_server.cpp  (+3 more)
firmware/fk/l10n/: en-US.c  en-US.json  es-ES.c  es-ES.json  es-LA.c  es-LA.json  l10n.h
firmware/fk/modules/: configure.cpp  configure.h  configure_module_worker.cpp  configure_module_worker.h  eeprom.cpp  eeprom.h  enable_module_power.cpp  enable_module_power.h  refresh_modules_worker.cpp  registry.cpp  registry.h  scan_modules_worker.cpp  scan_modules_worker.h  scanning.cpp  scanning.h  service_modules_worker.cpp  service_modules_worker.h  unknown.cpp
firmware/fk/modules/bridge/: contexts.h  data.h  meta.h  module_readings.h  modules_bridge.cpp  modules_bridge.h
firmware/fk/modules/dyn/: compiled.h  dyn.cpp  dyn.h  process.cpp  process.h
firmware/fk/modules/shared/: crc.c  modules.h
firmware/fk/networking/: api_handler.cpp  api_handler.h  connection.cpp  connection.h  cpool.cpp  cpool.h  debug_connection.cpp  debug_connection.h  default_routes.h  dns_message.cpp  dns_message.h  download_firmware_worker.cpp  download_firmware_worker.h  download_handler.cpp  http_connection.cpp  http_connection.h  http_reply.cpp  http_reply.h  http_server_connection.cpp  http_server_connection.h  module_handler.cpp  module_handler.h  network_duration.cpp  network_duration.h  network_services.cpp  network_services.h  receive_firmware_handler.cpp  receive_firmware_handler.h  req.cpp  upload_data_worker.cpp  upload_data_worker.h  url_parser.h  wifi_toggle_worker.cpp  wifi_toggle_worker.h  winc_upgrade.cpp  winc_upgrade.h
firmware/fk/startup/: sd_card_files.cpp  sd_card_files.h  startup_worker.cpp  startup_worker.h
firmware/fk/state/: dynamic.cpp  dynamic.h  modules.cpp  modules.h  network_state.h  power_state.h  schedule_state.h
firmware/fk/storage/: backup_worker.cpp  basic_page_cache.h  caching_memory.cpp  caching_memory.h  data_record.cpp  data_record.h  dump_flash_memory_worker.cpp  dump_flash_memory_worker.h  events.cpp  events.h  factory_wipe.cpp  factory_wipe.h  factory_wipe_worker.cpp  factory_wipe_worker.h  file_ops.h  file_ops_phylum.cpp  file_ops_phylum.h  memory_page_store.cpp  memory_page_store.h  meta_record.cpp  meta_record.h  page_cache.h  phylum.cpp  phylum.h  phylum_data_file.cpp  phylum_data_file.h  sequential_memory.cpp  sequential_memory.h  statistics_memory.cpp  statistics_memory.h  storage.cpp  storage.h  types.h
firmware/fk/tasks/: debug.cpp  display.cpp  idle.cpp  network.cpp  scheduler.cpp  tasks.cpp  tasks.h  worker.cpp
firmware/fk/uw/: esp32_passthru_worker.cpp  esp32_passthru_worker.h  flash_marker_lights_worker.cpp  flash_marker_lights_worker.h  program_fkuw_worker.cpp  program_fkuw_worker.h
firmware/modules/: CMakeLists.txt
firmware/modules/diagnostics/main/: diagnostics_module.cpp  diagnostics_module.h  module.cpp
firmware/modules/distance/main/: module.cpp  (+2 more)
firmware/tests/hosted/: CMakeLists.txt  buffers_tests.cpp  dns_tests.cpp  events_tests.cpp  httpd_tests.cpp  lora_packetizer_tests.cpp  mdns_tests.cpp  mocks_and_fakes.h  patterns.h  protobuf_size_tests.cpp  rain_collector_tests.cpp  readings_worker_tests.cpp  startup_worker_tests.cpp  storage_suite.h  test_modules.cpp  test_modules.h  test_phylum.cpp  test_pool.cpp  utilities.cpp  utilities.h
firmware/tools/: flash-core  flash-core-rtt  package-weather.sh  package.sh  update-strings.sh
rustfk/: Cargo.toml
rustfk/cli/: Cargo.toml
rustfk/cli/src/: main.rs
rustfk/libs/discovery/: Cargo.toml
rustfk/libs/protos/: Cargo.toml
rustfk/libs/query/: Cargo.toml
rustfk/libs/store/: Cargo.toml
rustfk/libs/sync/: Cargo.toml
(+743 files in other folders)
