[workspace]
members = [
    "libs/protos",
    "libs/query",
    "libs/discovery",
    "libs/store",
    "libs/sync",
    "cli",
]
default-members = ["cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
itertools = "0.11.0"
hex = "0.4.3"
chrono = "0.4.37"
serde_json = "1.0.115"
tracing = "0.1.40"
socket2 = "0.5.6"
varint = "0.9.0"
base64 = "0.22.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "fs", "io-util"] }
serde = { version = "1.0.197", features = ["derive"] }
prost = "0.11.9"
quick-protobuf = "0.8.1"
lazy_static = "1.4.0"
range-set-blaze = "0.1.16"
tokio-stream = "0.1.15"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
