[package]
name = "protos"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

# [build-dependencies]
# prost-build = "0.11.9"
